# gradio-issue-example

./: README.md  pyproject.toml
backend/gradio_joboverview/: __init__.py  joboverview.py
backend/gradio_joboverview/templates/component/: index.js  style.css
demo/: app.py
frontend/: Index.svelte  package-lock.json  package.json
frontend/shared/: JobOverview.svelte  types.ts
