[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_joboverview"
version = "0.1.3"
description = "Highly customized job overview component for our LoRA training jobs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "redevined", email = "wirtholiv@gmail.com" }]
keywords = [
  "gradio-custom-component",
  "gradio-template-Gallery"
]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_joboverview/templates", "*.pyi", "backend/gradio_joboverview/templates", "backend/gradio_joboverview/templates", "backend/gradio_joboverview/templates", "backend/gradio_joboverview/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_joboverview"]
